// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader can be selected 1`] = `
<div>
  <div
    class="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft "
  >
    <div>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          title="Zhejiang"
        >
          Zhejiang
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          title="Hangzhou"
        >
          Hangzhou
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 2`] = `
<div>
  <div
    class="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft "
  >
    <div>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          title="Zhejiang"
        >
          Zhejiang
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          title="Hangzhou"
        >
          Hangzhou
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item"
          title="West Lake"
        >
          West Lake
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 3`] = `
<div>
  <div
    class="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft  ant-cascader-menus-hidden"
  >
    <div>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          title="Zhejiang"
        >
          Zhejiang
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          title="Hangzhou"
        >
          Hangzhou
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          title="West Lake"
        >
          West Lake
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly when panel is hidden 1`] = `
<div>
  <div
    class="ant-cascader-menus  ant-cascader-menus-empty ant-cascader-menus-placement-bottomLeft  ant-cascader-menus-hidden"
  >
    <div />
  </div>
</div>
`;

exports[`Cascader popup correctly when panel is open 1`] = `
<div>
  <div
    class="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft "
  >
    <div>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          title="Zhejiang"
        >
          Zhejiang
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue 1`] = `
<div>
  <div
    class="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft "
  >
    <div>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          title="Zhejiang"
        >
          Zhejiang
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          title="Hangzhou"
        >
          Hangzhou
          <span
            class="ant-cascader-menu-item-expand-icon"
          >
            <i
              class="anticon anticon-right"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
      >
        <li
          class="ant-cascader-menu-item"
          title="West Lake"
        >
          West Lake
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader 1`] = `
<Popup
  action={
    Array [
      "click",
    ]
  }
  align={
    Object {
      "offset": Array [
        0,
        4,
      ],
      "overflow": Object {
        "adjustX": 1,
        "adjustY": 1,
      },
      "points": Array [
        "tl",
        "bl",
      ],
    }
  }
  className=""
  destroyPopupOnHide={false}
  getClassNameFromAlign={[Function]}
  getRootDomNode={[Function]}
  mask={false}
  onAlign={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  prefixCls="ant-cascader-menus"
  style={Object {}}
  transitionName="slide-up"
  visible={true}
>
  <div>
    <Animate
      animation={Object {}}
      component=""
      componentProps={Object {}}
      exclusive={true}
      onAppear={[Function]}
      onEnd={[Function]}
      onEnter={[Function]}
      onLeave={[Function]}
      showProp="xVisible"
      transitionAppear={true}
      transitionEnter={true}
      transitionLeave={true}
      transitionName="slide-up"
    >
      <AnimateChild
        animation={Object {}}
        key="popup"
        transitionAppear={true}
        transitionEnter={true}
        transitionLeave={true}
        transitionName="slide-up"
      >
        <Align
          align={
            Object {
              "offset": Array [
                0,
                4,
              ],
              "overflow": Object {
                "adjustX": 1,
                "adjustY": 1,
              },
              "points": Array [
                "tl",
                "bl",
              ],
            }
          }
          childrenProps={
            Object {
              "visible": "xVisible",
            }
          }
          disabled={false}
          key="popup"
          monitorBufferTime={50}
          monitorWindowResize={true}
          onAlign={[Function]}
          target={[Function]}
          xVisible={true}
        >
          <PopupInner
            className="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft "
            hiddenClassName="ant-cascader-menus-hidden"
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            prefixCls="ant-cascader-menus"
            style={Object {}}
            visible={true}
          >
            <div
              className="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft "
              onMouseDown={[Function]}
              onTouchStart={[Function]}
              style={Object {}}
            >
              <LazyRenderBox
                className="ant-cascader-menus-content"
                visible={true}
              >
                <Menus
                  activeValue={Array []}
                  allowClear={true}
                  builtinPlacements={
                    Object {
                      "bottomLeft": Object {
                        "offset": Array [
                          0,
                          4,
                        ],
                        "overflow": Object {
                          "adjustX": 1,
                          "adjustY": 1,
                        },
                        "points": Array [
                          "tl",
                          "bl",
                        ],
                      },
                      "bottomRight": Object {
                        "offset": Array [
                          0,
                          4,
                        ],
                        "overflow": Object {
                          "adjustX": 1,
                          "adjustY": 1,
                        },
                        "points": Array [
                          "tr",
                          "br",
                        ],
                      },
                      "topLeft": Object {
                        "offset": Array [
                          0,
                          -4,
                        ],
                        "overflow": Object {
                          "adjustX": 1,
                          "adjustY": 1,
                        },
                        "points": Array [
                          "bl",
                          "tl",
                        ],
                      },
                      "topRight": Object {
                        "offset": Array [
                          0,
                          -4,
                        ],
                        "overflow": Object {
                          "adjustX": 1,
                          "adjustY": 1,
                        },
                        "points": Array [
                          "br",
                          "tr",
                        ],
                      },
                    }
                  }
                  defaultFieldNames={
                    Object {
                      "children": "children",
                      "label": "label",
                      "value": "value",
                    }
                  }
                  disabled={false}
                  dropdownMenuColumnStyle={
                    Object {
                      "width": 0,
                    }
                  }
                  expandIcon={
                    <Icon
                      type="right"
                    />
                  }
                  expandTrigger="click"
                  fieldNames={
                    Object {
                      "children": "children",
                      "label": "label",
                      "value": "value",
                    }
                  }
                  loadingIcon={
                    <span
                      className="ant-cascader-menu-item-loading-icon"
                    >
                      <Icon
                        spin={true}
                        type="redo"
                      />
                    </span>
                  }
                  onChange={[Function]}
                  onItemDoubleClick={[Function]}
                  onPopupVisibleChange={[Function]}
                  onSelect={[Function]}
                  options={
                    Array [
                      Object {
                        "__IS_FILTERED_OPTION": true,
                        "disabled": false,
                        "label": Array [
                          "Jiangsu",
                          Array [
                            " / ",
                            "Nanjing",
                          ],
                          Array [
                            " / ",
                            "Zhong Hua Men",
                          ],
                        ],
                        "path": Array [
                          Object {
                            "children": Array [
                              Object {
                                "children": Array [
                                  Object {
                                    "label": "Zhong Hua Men",
                                    "value": "zhonghuamen",
                                  },
                                ],
                                "label": "Nanjing",
                                "value": "nanjing",
                              },
                            ],
                            "label": "Jiangsu",
                            "value": "jiangsu",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "label": "Zhong Hua Men",
                                "value": "zhonghuamen",
                              },
                            ],
                            "label": "Nanjing",
                            "value": "nanjing",
                          },
                          Object {
                            "label": "Zhong Hua Men",
                            "value": "zhonghuamen",
                          },
                        ],
                        "value": Array [
                          "jiangsu",
                          "nanjing",
                          "zhonghuamen",
                        ],
                      },
                      Object {
                        "__IS_FILTERED_OPTION": true,
                        "disabled": false,
                        "label": Array [
                          "Zhejiang",
                          Array [
                            " / ",
                            Array [
                              "Hang",
                              Array [
                                <span
                                  className="ant-cascader-menu-item-keyword"
                                >
                                  z
                                </span>,
                                "hou",
                              ],
                            ],
                          ],
                          Array [
                            " / ",
                            "West Lake",
                          ],
                        ],
                        "path": Array [
                          Object {
                            "children": Array [
                              Object {
                                "children": Array [
                                  Object {
                                    "label": "West Lake",
                                    "value": "xihu",
                                  },
                                ],
                                "label": "Hangzhou",
                                "value": "hangzhou",
                              },
                            ],
                            "label": "Zhejiang",
                            "value": "zhejiang",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "label": "West Lake",
                                "value": "xihu",
                              },
                            ],
                            "label": "Hangzhou",
                            "value": "hangzhou",
                          },
                          Object {
                            "label": "West Lake",
                            "value": "xihu",
                          },
                        ],
                        "value": Array [
                          "zhejiang",
                          "hangzhou",
                          "xihu",
                        ],
                      },
                    ]
                  }
                  placeholder="Please select"
                  popupClassName=""
                  popupPlacement="bottomLeft"
                  popupVisible={true}
                  prefixCls="ant-cascader"
                  showSearch={
                    Object {
                      "filter": [Function],
                    }
                  }
                  transitionName="slide-up"
                  value={Array []}
                  visible={true}
                >
                  <div>
                    <ul
                      className="ant-cascader-menu"
                      key="0"
                      style={
                        Object {
                          "width": 0,
                        }
                      }
                    >
                      <li
                        className="ant-cascader-menu-item"
                        key="jiangsu,nanjing,zhonghuamen"
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        title=""
                      >
                        Jiangsu
                         / 
                        Nanjing
                         / 
                        Zhong Hua Men
                      </li>
                      <li
                        className="ant-cascader-menu-item"
                        key="zhejiang,hangzhou,xihu"
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        title=""
                      >
                        Zhejiang
                         / 
                        Hang
                        <span
                          className="ant-cascader-menu-item-keyword"
                          key="seperator"
                        >
                          z
                        </span>
                        hou
                         / 
                        West Lake
                      </li>
                    </ul>
                  </div>
                </Menus>
              </LazyRenderBox>
            </div>
          </PopupInner>
        </Align>
      </AnimateChild>
    </Animate>
  </div>
</Popup>
`;

exports[`Cascader should render not found content 1`] = `
<Popup
  action={
    Array [
      "click",
    ]
  }
  align={
    Object {
      "offset": Array [
        0,
        4,
      ],
      "overflow": Object {
        "adjustX": 1,
        "adjustY": 1,
      },
      "points": Array [
        "tl",
        "bl",
      ],
    }
  }
  className=""
  destroyPopupOnHide={false}
  getClassNameFromAlign={[Function]}
  getRootDomNode={[Function]}
  mask={false}
  onAlign={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  prefixCls="ant-cascader-menus"
  style={Object {}}
  transitionName="slide-up"
  visible={true}
>
  <div>
    <Animate
      animation={Object {}}
      component=""
      componentProps={Object {}}
      exclusive={true}
      onAppear={[Function]}
      onEnd={[Function]}
      onEnter={[Function]}
      onLeave={[Function]}
      showProp="xVisible"
      transitionAppear={true}
      transitionEnter={true}
      transitionLeave={true}
      transitionName="slide-up"
    >
      <AnimateChild
        animation={Object {}}
        key="popup"
        transitionAppear={true}
        transitionEnter={true}
        transitionLeave={true}
        transitionName="slide-up"
      >
        <Align
          align={
            Object {
              "offset": Array [
                0,
                4,
              ],
              "overflow": Object {
                "adjustX": 1,
                "adjustY": 1,
              },
              "points": Array [
                "tl",
                "bl",
              ],
            }
          }
          childrenProps={
            Object {
              "visible": "xVisible",
            }
          }
          disabled={false}
          key="popup"
          monitorBufferTime={50}
          monitorWindowResize={true}
          onAlign={[Function]}
          target={[Function]}
          xVisible={true}
        >
          <PopupInner
            className="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft "
            hiddenClassName="ant-cascader-menus-hidden"
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            prefixCls="ant-cascader-menus"
            style={Object {}}
            visible={true}
          >
            <div
              className="ant-cascader-menus  ant-cascader-menus-placement-bottomLeft "
              onMouseDown={[Function]}
              onTouchStart={[Function]}
              style={Object {}}
            >
              <LazyRenderBox
                className="ant-cascader-menus-content"
                visible={true}
              >
                <Menus
                  activeValue={Array []}
                  allowClear={true}
                  builtinPlacements={
                    Object {
                      "bottomLeft": Object {
                        "offset": Array [
                          0,
                          4,
                        ],
                        "overflow": Object {
                          "adjustX": 1,
                          "adjustY": 1,
                        },
                        "points": Array [
                          "tl",
                          "bl",
                        ],
                      },
                      "bottomRight": Object {
                        "offset": Array [
                          0,
                          4,
                        ],
                        "overflow": Object {
                          "adjustX": 1,
                          "adjustY": 1,
                        },
                        "points": Array [
                          "tr",
                          "br",
                        ],
                      },
                      "topLeft": Object {
                        "offset": Array [
                          0,
                          -4,
                        ],
                        "overflow": Object {
                          "adjustX": 1,
                          "adjustY": 1,
                        },
                        "points": Array [
                          "bl",
                          "tl",
                        ],
                      },
                      "topRight": Object {
                        "offset": Array [
                          0,
                          -4,
                        ],
                        "overflow": Object {
                          "adjustX": 1,
                          "adjustY": 1,
                        },
                        "points": Array [
                          "br",
                          "tr",
                        ],
                      },
                    }
                  }
                  defaultFieldNames={
                    Object {
                      "children": "children",
                      "label": "label",
                      "value": "value",
                    }
                  }
                  disabled={false}
                  dropdownMenuColumnStyle={
                    Object {
                      "height": "auto",
                      "width": 0,
                    }
                  }
                  expandIcon={
                    <Icon
                      type="right"
                    />
                  }
                  expandTrigger="click"
                  fieldNames={
                    Object {
                      "children": "children",
                      "label": "label",
                      "value": "value",
                    }
                  }
                  loadingIcon={
                    <span
                      className="ant-cascader-menu-item-loading-icon"
                    >
                      <Icon
                        spin={true}
                        type="redo"
                      />
                    </span>
                  }
                  onChange={[Function]}
                  onItemDoubleClick={[Function]}
                  onPopupVisibleChange={[Function]}
                  onSelect={[Function]}
                  options={
                    Array [
                      Object {
                        "disabled": true,
                        "label": <Consumer>
                          [Function]
                        </Consumer>,
                        "value": "ANT_CASCADER_NOT_FOUND",
                      },
                    ]
                  }
                  placeholder="Please select"
                  popupClassName=""
                  popupPlacement="bottomLeft"
                  popupVisible={true}
                  prefixCls="ant-cascader"
                  showSearch={
                    Object {
                      "filter": [Function],
                    }
                  }
                  transitionName="slide-up"
                  value={Array []}
                  visible={true}
                >
                  <div>
                    <ul
                      className="ant-cascader-menu"
                      key="0"
                      style={
                        Object {
                          "height": "auto",
                          "width": 0,
                        }
                      }
                    >
                      <li
                        className="ant-cascader-menu-item ant-cascader-menu-item-disabled"
                        key="ANT_CASCADER_NOT_FOUND"
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        title=""
                      >
                        <Consumer>
                          <Empty
                            className="ant-empty-small"
                            image="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iNjRweCIgaGVpZ2h0PSI0MXB4IiB2aWV3Qm94PSIwIDAgNjQgNDEiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDUyLjUgKDY3NDY5KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDxnIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxIiBmaWxsPSJub25lIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiPgogICAgICAgIDxnIHRyYW5zZm9ybT0idHJhbnNsYXRlKC00NzIuMDAwMDAwLCAtMTMzNS4wMDAwMDApIj4KICAgICAgICAgICAgPGcgIHRyYW5zZm9ybT0idHJhbnNsYXRlKDY0LjAwMDAwMCwgMTExNC4wMDAwMDApIj4KICAgICAgICAgICAgICAgIDxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSg0MC4wMDAwMDAsIDc4LjAwMDAwMCkiPgogICAgICAgICAgICAgICAgICAgIDxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSgzNjguMDAwMDAwLCAxNDQuMDAwMDAwKSI+CiAgICAgICAgICAgICAgICAgICAgICAgIDxnID4KICAgICAgICAgICAgICAgICAgICAgICAgICAgIDxlbGxpcHNlICBmaWxsPSIjRjVGNUY1IiBjeD0iMzIiIGN5PSIzMyIgcng9IjMyIiByeT0iNyI+PC9lbGxpcHNlPgogICAgICAgICAgICAgICAgICAgICAgICAgICAgPGcgICB0cmFuc2Zvcm09InRyYW5zbGF0ZSg5LjAwMDAwMCwgMC4wMDAwMDApIiBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgPHBhdGggZD0iTTQ2LDEyLjc2MDU2MDQgTDM1Ljg1NDMwNDcsMS4yNTczOTYzMyBDMzUuMzY3NDQxNCwwLjQ3MzgyNjYwNSAzNC42NTU4Nzg5LDAgMzMuOTA2NzYxNywwIEwxMi4wOTMyMzgzLDAgQzExLjM0NDEyMTEsMCAxMC42MzI1NTg2LDAuNDczOTUwMjU1IDEwLjE0NTY5NTMsMS4yNTczOTYzMyBMMi42MTQ3OTcyN2UtMTIsMTIuNzYwNTYwNCBMMCwyMiBMNDYsMjIgTDQ2LDEyLjc2MDU2MDQgWiIgID48L3BhdGg+CiAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgPHBhdGggZD0iTTMyLjYxMzI4MTMsMTUuOTMxNSBDMzIuNjEzMjgxMywxNC4zMjU4NTExIDMzLjYwNjk1MzEsMTMuMDAwMjM0IDM0LjgzOTY5OTIsMTMgTDQ2LDEzIEw0NiwzMS4xMzcxMjc3IEM0NiwzMy4yNTg5NTc0IDQ0LjY3OTM4NjcsMzUgNDMuMDUwNDI5NywzNSBMMi45NDk1NzAzMSwzNSBDMS4zMjA1MjM0NCwzNSAwLDMzLjI1ODg0MDQgMCwzMS4xMzcxMjc3IEwwLDEzIEwxMS4xNjAzMDA4LDEzIEMxMi4zOTMwNDY5LDEzIDEzLjM4NjcxODgsMTQuMzIyODA4NSAxMy4zODY3MTg4LDE1LjkyODQ1NzQgTDEzLjM4NjcxODgsMTUuOTQ5NjM4MyBDMTMuMzg2NzE4OCwxNy41NTUyODcyIDE0LjM5MTcxMDksMTguODUxMTgwOSAxNS42MjQ0NTcsMTguODUxMTgwOSBMMzAuMzc1NTQzLDE4Ljg1MTE4MDkgQzMxLjYwODI4OTEsMTguODUxMTgwOSAzMi42MTMyODEzLDE3LjU0MzM1MTEgMzIuNjEzMjgxMywxNS45Mzc3MDIxIEwzMi42MTMyODEzLDE1LjkzMTUgWiIgIGZpbGw9IiNGQUZBRkEiPjwvcGF0aD4KICAgICAgICAgICAgICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgICAgICAgICAgICAgPC9nPgogICAgICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgPC9nPgogICAgICAgIDwvZz4KICAgIDwvZz4KPC9zdmc+"
                          >
                            <Consumer>
                              <LocaleReceiver
                                componentName="Empty"
                              >
                                <div
                                  className="ant-empty ant-empty-small"
                                >
                                  <div
                                    className="ant-empty-image"
                                  >
                                    <img
                                      alt="No Data"
                                      src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iNjRweCIgaGVpZ2h0PSI0MXB4IiB2aWV3Qm94PSIwIDAgNjQgNDEiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDUyLjUgKDY3NDY5KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDxnIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxIiBmaWxsPSJub25lIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiPgogICAgICAgIDxnIHRyYW5zZm9ybT0idHJhbnNsYXRlKC00NzIuMDAwMDAwLCAtMTMzNS4wMDAwMDApIj4KICAgICAgICAgICAgPGcgIHRyYW5zZm9ybT0idHJhbnNsYXRlKDY0LjAwMDAwMCwgMTExNC4wMDAwMDApIj4KICAgICAgICAgICAgICAgIDxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSg0MC4wMDAwMDAsIDc4LjAwMDAwMCkiPgogICAgICAgICAgICAgICAgICAgIDxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSgzNjguMDAwMDAwLCAxNDQuMDAwMDAwKSI+CiAgICAgICAgICAgICAgICAgICAgICAgIDxnID4KICAgICAgICAgICAgICAgICAgICAgICAgICAgIDxlbGxpcHNlICBmaWxsPSIjRjVGNUY1IiBjeD0iMzIiIGN5PSIzMyIgcng9IjMyIiByeT0iNyI+PC9lbGxpcHNlPgogICAgICAgICAgICAgICAgICAgICAgICAgICAgPGcgICB0cmFuc2Zvcm09InRyYW5zbGF0ZSg5LjAwMDAwMCwgMC4wMDAwMDApIiBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgPHBhdGggZD0iTTQ2LDEyLjc2MDU2MDQgTDM1Ljg1NDMwNDcsMS4yNTczOTYzMyBDMzUuMzY3NDQxNCwwLjQ3MzgyNjYwNSAzNC42NTU4Nzg5LDAgMzMuOTA2NzYxNywwIEwxMi4wOTMyMzgzLDAgQzExLjM0NDEyMTEsMCAxMC42MzI1NTg2LDAuNDczOTUwMjU1IDEwLjE0NTY5NTMsMS4yNTczOTYzMyBMMi42MTQ3OTcyN2UtMTIsMTIuNzYwNTYwNCBMMCwyMiBMNDYsMjIgTDQ2LDEyLjc2MDU2MDQgWiIgID48L3BhdGg+CiAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgPHBhdGggZD0iTTMyLjYxMzI4MTMsMTUuOTMxNSBDMzIuNjEzMjgxMywxNC4zMjU4NTExIDMzLjYwNjk1MzEsMTMuMDAwMjM0IDM0LjgzOTY5OTIsMTMgTDQ2LDEzIEw0NiwzMS4xMzcxMjc3IEM0NiwzMy4yNTg5NTc0IDQ0LjY3OTM4NjcsMzUgNDMuMDUwNDI5NywzNSBMMi45NDk1NzAzMSwzNSBDMS4zMjA1MjM0NCwzNSAwLDMzLjI1ODg0MDQgMCwzMS4xMzcxMjc3IEwwLDEzIEwxMS4xNjAzMDA4LDEzIEMxMi4zOTMwNDY5LDEzIDEzLjM4NjcxODgsMTQuMzIyODA4NSAxMy4zODY3MTg4LDE1LjkyODQ1NzQgTDEzLjM4NjcxODgsMTUuOTQ5NjM4MyBDMTMuMzg2NzE4OCwxNy41NTUyODcyIDE0LjM5MTcxMDksMTguODUxMTgwOSAxNS42MjQ0NTcsMTguODUxMTgwOSBMMzAuMzc1NTQzLDE4Ljg1MTE4MDkgQzMxLjYwODI4OTEsMTguODUxMTgwOSAzMi42MTMyODEzLDE3LjU0MzM1MTEgMzIuNjEzMjgxMywxNS45Mzc3MDIxIEwzMi42MTMyODEzLDE1LjkzMTUgWiIgIGZpbGw9IiNGQUZBRkEiPjwvcGF0aD4KICAgICAgICAgICAgICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgICAgICAgICAgICAgPC9nPgogICAgICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgPC9nPgogICAgICAgIDwvZz4KICAgIDwvZz4KPC9zdmc+"
                                    />
                                  </div>
                                  <p
                                    className="ant-empty-description"
                                  >
                                    No Data
                                  </p>
                                </div>
                              </LocaleReceiver>
                            </Consumer>
                          </Empty>
                        </Consumer>
                      </li>
                    </ul>
                  </div>
                </Menus>
              </LazyRenderBox>
            </div>
          </PopupInner>
        </Align>
      </AnimateChild>
    </Animate>
  </div>
</Popup>
`;

exports[`Cascader support controlled mode 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  >
    Zhejiang / Hangzhou / West Lake
  </span>
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-close-circle ant-cascader-picker-clear"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="close-circle"
      fill="currentColor"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
      />
    </svg>
  </i>
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </i>
</span>
`;
